--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
-  "name": "dioshop",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "history": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
+  "name": "bootcamp-react-dio-inter",
+  "version": "1.0.0",
+  "description": "Repository for study purpose in React and JavaScript",
+  "main": "./dist/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./",
+    "build": "tsc -p .",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SaimonDavi/bootcamp-react-dio-inter.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Saimon Davi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SaimonDavi/bootcamp-react-dio-inter/issues"
   },
+  "homepage": "https://github.com/SaimonDavi/bootcamp-react-dio-inter#readme",
   "devDependencies": {
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.14",
+    "@types/pg": "^8.6.4",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.7.1"
   }
 }
